Use actual dashboard template spec in openapi.yaml
