# pkg/models/DashboardTemplate.go
@@ -1,5 +1,7 @@
 package models
 
-type DashboardTemplate struct {
-	BaseModel
-}
+import (
+	"github.com/RedHatInsights/widget-layout-backend/api"
+)
+
+type DashboardTemplate = api.DashboardTemplate
